--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "three": "^0.139.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
