--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-parallax-tilt": "^1.7.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tilt": "^0.1.4",
