--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"git" : "git add . && git commit -m changes && git push origin main"
 	},
 	"eslintConfig": {
 		"extends": [
