--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-scripts": "5.0.1",
 		"react-tilt": "^0.1.4",
 		"styled-components": "^5.3.5",
+		"swiper": "^6.8.4",
 		"three": "^0.139.2",
 		"web-vitals": "^2.1.4"
 	},
