--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"react-tilt": "^0.1.4",
+		"react-toastify": "^8.2.0",
 		"styled-components": "^5.3.5",
 		"swiper": "^6.8.4",
 		"three": "^0.139.2",
