--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-parallax-tilt": "^1.7.9",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-spring": "^9.4.4",
 		"react-tilt": "^0.1.4",
 		"styled-components": "^5.3.5",
 		"swiper": "^6.8.4",
