--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
+		"firebase": "^9.7.0",
 		"gsap": "^3.10.4",
 		"moment": "^2.29.3",
 		"react": "^18.0.0",
