--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"firebase": "^9.7.0",
 		"gsap": "^3.10.4",
 		"moment": "^2.29.3",
+		"otp-input-react": "^0.3.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-helmet": "^6.1.0",
