--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"git": "git add . && git commit -m changes && git push origin main"
+		"git": "git add . && git commit -m changes && git push origin main",
+		"deploy": "npm run build && git add . && git commit -m changes && git push origin main"
 	},
 	"eslintConfig": {
 		"extends": [
 			"react-app",
 			"react-app/jest"
 		]
-		
 	},
 	"browserslist": {
 		"production": [
