--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"git": "git add . && git commit -m changes && git push origin main",
-		"deploy": "npm run build && git add . && git commit -m changes && git push origin main"
+		"deploy": "git pull origin main && npm run build && git add . && git commit -m changes && git push origin main"
 	},
 	"eslintConfig": {
 		"extends": [
